#
# misc. data files
#
# None yet
# dist_pkgdata_DATA =

#
# desktop integration: .desktop file
#
desktopdir = $(datadir)/applications
dist_desktop_DATA = marble-game.desktop

#
# desktop integration: application icon
#
appicondir = $(datadir)/pixmaps
dist_appicon_DATA = marble-game.png marble-image.png
